# dispatcher

./: .gitignore  Makefile.am  README.md  conf  configure.ac  dispatcher.cpp  main.cpp
include/: argparse.h  command.h  dispatcher.h
src/: argparse.cpp  command.cpp  dispatcher.cpp  main.cpp
